Fix white space on mobiles between 1st and 2nd blocks
Remove "fillingscreen" and add 50px padding

--- a/style.css
+++ b/style.css
@@ -22,6 +22,20 @@ a:hover {
     cursor: pointer;
 }
 
+.img-userphoto-postironical-toberemoved {
+    height: 20px;
+    width: 129px;
+}
+
+.username-name {
+    width: 100%;
+    font-size: 16px;
+}
+
+.addsmolpad {
+    padding: 50px;
+}
+
 .main {
     width: 100%;
     clear: both;
@@ -84,6 +98,10 @@ a:hover {
 }
 
 .partofdividing2 .container {
+    width: 100%;
+}
+
+.link-register-style {
     width: 100%;
 }
 
